[gd_scene load_steps=8 format=3 uid="uid://ch8nj6noy1cqm"]

[ext_resource type="Texture2D" uid="uid://bpfw6dkcww5wy" path="res://Art/SlothBear/sloth.png" id="1_bh1yj"]
[ext_resource type="Script" path="res://Art/SlothBear/sloth_bear.gd" id="1_eauc1"]

[sub_resource type="Animation" id="Animation_cebtf"]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Minotaur:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_6egce"]
resource_name = "Normal"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ftcw"]
_data = {
"Hurt": SubResource("Animation_cebtf"),
"Normal": SubResource("Animation_6egce")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_60u15"]
radius = 42.8492

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3pkoq"]
radius = 11.1398
height = 26.2238

[node name="SlothBear" type="CharacterBody2D" groups=["Enemies"]]
scale = Vector2(5.28251, 5.28251)
collision_layer = 2
collision_mask = 19
motion_mode = 1
script = ExtResource("1_eauc1")

[node name="SlothBear" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1.90735e-06, -2.86102e-06)
scale = Vector2(1.10625, 1.10625)
texture = ExtResource("1_bh1yj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4ftcw")
}

[node name="Area2D" type="Area2D" parent="." groups=["Enemies"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1.52469e-12, -1.90735e-06)
rotation = 1.5708
scale = Vector2(1.95999, 1.97332)
shape = SubResource("CircleShape2D_60u15")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.92308)
scale = Vector2(1.32351, 2.2)
shape = SubResource("CapsuleShape2D_3pkoq")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
